# dev.omerkurt.Tureng

./: .gitignore  README.md  dev.omerkurt.Tureng.json  meson.build
.flatpak-builder/checksums/: x86_64-dev.omerkurt.Tureng.json
data/: dev.omerkurt.Tureng.desktop.in  dev.omerkurt.Tureng.metainfo.xml.in  meson.build
data/icons/: meson.build
local_repo/: summary  summary.idx
local_repo/summaries/: 3240cc507dc935c5edf006769706ce86f12025096c7885c74fa46ef79dec20bb-63e5c7a6a32fccd44db212d47b2031f87036a393aaa27a25703f1ae3cada4c25.delta  370a0ba3b759b635c5914450e093406d2528755f09e95b7ab41860bc6b51d3e8-3f1d951cf669d1093fab9c9e2acfd95b8c1009e53be7412002743f82d44cdbc6.delta  370a0ba3b759b635c5914450e093406d2528755f09e95b7ab41860bc6b51d3e8-44ad878fb762ff862a9e09e9f92f95c43e178b10cf9c0f526bc914f7a0100657.delta  370a0ba3b759b635c5914450e093406d2528755f09e95b7ab41860bc6b51d3e8-47e89c2dc71e72c1c0e2aeac410b804a0c396b0d6a46fdb694a789ab60fcc7ef.delta  370a0ba3b759b635c5914450e093406d2528755f09e95b7ab41860bc6b51d3e8-63e5c7a6a32fccd44db212d47b2031f87036a393aaa27a25703f1ae3cada4c25.delta  370a0ba3b759b635c5914450e093406d2528755f09e95b7ab41860bc6b51d3e8-927ece46b381f14322334c34e8757d2c8d13d8e5ce987700eebf6d99b56e6487.delta  44ad878fb762ff862a9e09e9f92f95c43e178b10cf9c0f526bc914f7a0100657-3f1d951cf669d1093fab9c9e2acfd95b8c1009e53be7412002743f82d44cdbc6.delta  (+12 more)
po/: POTFILES  meson.build
src/: meson.build  style.css  turengvocabulary.gresource.xml  turengvocabulary.in  window.blp  window.py
subprojects/: blueprint-compiler.wrap
(+41 files in other folders)
